--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -1349,12 +1349,15 @@ conditional_spaghetti(
   reactance_ordinal, 
   effects = c('persuasion_self_cw', 'pressure_self_cw')
   , group_var = 'coupleID'
-  , n_groups = 10
+  #, n_groups = 10
   , plot_full_range = T
-  )
+)
 
 
 ```
+
+only plotting 10 random participant's random effects to make the plot readable. 
+
 
 ```{r reactance_ordinal_marginaleffects}
 
