--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -57,13 +57,14 @@ options(
   brms.file_refit = ifelse(use_mi, 'never', 'on_change'),
   brms.file_refit = 'on_change',
   #brms.file_refit = 'always',
-  error = function() beepr::beep(sound = 5)
+  error = function() beepr::beep(sound = 5),
+  es.use_symbols = TRUE
 )
 
 
 ####################### Model parameters #######################
 
-iterations = 5000 # use 40'000
+iterations = 12000 # use 40'000
 warmup = 2000
 
 # NO AR!!!
