--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -526,27 +526,20 @@ formula <- bf(
 ) 
 
 prior1 <- c(
-  brms::set_prior("normal(0, 1.5)", class = "b")
-  , brms::set_prior("normal(0, 2.5", class = "b", dpar = "hu")
+  brms::set_prior("normal(0, 2.5)", class = "b")
+  , brms::set_prior("normal(0, 2)", class = "b", dpar = "hu")
   , brms::set_prior("normal(0, 50)", class = "Intercept") # for non-zero PA
-  , brms::set_prior("normal(6, 2.5)", class = "Intercept", dpar = 'hu') # hurdle part
-  
+  , brms::set_prior("normal(0.5, 2.5)", class = "Intercept", dpar = 'hu') # hurdle part
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-  
-  #, brms::set_prior("normal(10, 10", class = "shape")
-  
-  #, brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
-  #, brms::set_prior("cauchy(0, 2)", class = "sderr", lb = 0)
-  
-  #, autocor_prior
+  , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
 )
 
-#brms::validate_prior(
-#  prior1, 
-#  formula = formula, 
-#  data = df_double, 
-#  family = hurdle_lognormal()
-#)
+brms::validate_prior(
+  prior1, 
+  formula = formula, 
+  data = df_double, 
+  family = hurdle_lognormal()
+)
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
 
@@ -565,7 +558,7 @@ pa_sub <- my_brm(
   warmup = warmup,
   chains = 4,
   cores = 4,
-  seed = 7777,
+  seed = 42,
   file = file.path("models_cache_brms", paste0("pa_sub_hu_lognormal_NOAR", suffix))
   #, file_refit = 'always'
 )
@@ -657,11 +650,7 @@ Additionally, as a sensitivity analysis, we estimate the two part of the models 
 ## Two separate models
 
 ### Modelling 0/1 
-The zero vs. 1 modelling part also has high pareto-k values, but reaches the 
-same conslucsions as the hurdle model.
-We tried further simplifying by removing the residual AR1 correlation structure,
-which led to a model with good pareto-k values, still arriving at the same
-conslusion as the original hurdle model:
+
 ```{r pa_sub_separate_inactive, results='hide', message=FALSE}
 
 df_double$pa_sub_zero <- as.factor(ifelse(df_double$pa_sub > 0, 1, 0))
@@ -685,16 +674,11 @@ formula <- bf(
   #, autocor = autocor_str
 ) 
 
+
 prior1 <- c(
-    set_prior("normal(0, 1.5)", class = "b")
-  , brms::set_prior("normal(0, 5)", class = "Intercept") # for non-zero PA
-
-  , brms::set_prior("normal(0, 1)", class = "sd", group = "coupleID")
-
-  #, brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
-  #, brms::set_prior("cauchy(0, 1.5)", class = "sderr", lb = 0)
-  
-  #, autocor_prior
+  , brms::set_prior("normal(0, 2)", class = "b")
+  , brms::set_prior("normal(0.5, 2.5)", class = "Intercept") 
+  , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
 )
 
 #brms::validate_prior(
@@ -798,7 +782,7 @@ marginaleffects::avg_predictions(pa_sub_zero_model)
 df_double$pa_sub_non_zero <- ifelse(df_double$pa_sub > 0, df_double$pa_sub, NA)
 
 formula <- bf(
-  log(pa_sub_non_zero) ~ 
+  pa_sub_non_zero ~ 
     persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw +
@@ -816,23 +800,21 @@ formula <- bf(
   ##, autocor = autocor_str
 ) 
 
+
+
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b")
-  , brms::set_prior("normal(0, 50)", class = "Intercept") # for non-zero PA
-
+  , brms::set_prior("normal(0, 50)", class = "Intercept") 
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-  
-  , brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
-  #, brms::set_prior("cauchy(0, 2)", class = "sderr", lb = 0)
-  
-  #, autocor_prior
+  , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
 )
+
 
 #brms::validate_prior(
 #  prior1, 
 #  formula = formula, 
 #  data = df_double, 
-#  family = gaussian()
+#  family = lognormal()
 #  )
 
 
@@ -843,7 +825,7 @@ pa_sub_active_model <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = gaussian(),
+  family = lognormal(),
   #control = list(adapt_delta = 0.95),
   iter = iterations,
   warmup = warmup,
