--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -50,6 +50,7 @@ system("shutdown /a")
 use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
+report_hurdle = FALSE
 
 options(
   dplyr.print_max = 100, 
@@ -153,67 +154,6 @@ model_rows_random_ordinal <- c(model_rows_random,'disc')
 
 ```
 
-
-```{r set_display_names}
-
-# For indistinguishable Dyads
-model_rownames_fixed <- c(
-    'Intercept', 
-    # '-- WITHIN PERSON MAIN EFFECTS --', 
-    'Daily received persuasion target -> target', 
-    'Daily received persuasion target -> agent', 
-    'Daily received pressure target -> target', 
-    'Daily received pressure target -> agent', 
-    'Daily received pushing target -> target', 
-    'Daily received pushing target -> agent', 
-    'Day', 
-    'Daily weartime',
-    
-    # '-- BETWEEN PERSON MAIN EFFECTS',
-    'Mean received persuasion target -> target',
-    'Mean received persuasion target -> agent',
-    'Mean received pressure target -> target',
-    'Mean received pressure target -> agent',
-    'Mean received pushing target -> target',
-    'Mean received pushing target -> agent',
-    'Mean weartime'
-  )
-
-
-model_rownames_fixed_ordinal <- c(
-  model_rownames_fixed[1],
-  'Intercept[1]',
-  'Intercept[2]',
-  'Intercept[3]',
-  'Intercept[4]',
-  'Intercept[5]',
-  model_rownames_fixed[2:length(model_rownames_fixed)]
-)
-
-model_rownames_random <- c(
-  # '--------------',
-  # '-- RANDOM EFFECTS --',
-  'sd(Intercept)', 
-  'sd(Daily received persuasion target -> target)', 
-  'sd(Daily received persuasion target -> agent)', 
-  'sd(Daily received pressure target -> target)', 
-  'sd(Daily received pressure target -> agent)', 
-  'sd(Daily received pushing target -> target)', 
-  'sd(Daily received pushing target -> agent)', 
-  # '-- CORRELATION STRUCTURE -- ', 
-  'ar[1]',
-  'ma[1]', 
-  'cosy',
-  'nu',
-  'shape',
-  'sderr',
-  'sigma'
-)
-
-model_rownames_random_ordinal <- c(model_rownames_random,'disc')
-
-
-```
 
 
 ```{r set_display_names_alt}
@@ -347,6 +287,17 @@ model_rows_fixed_hu <- c(
     'hu_weartime_self_cb'
   )
 
+model_rows_fixed_hu_ordinal <- c(
+  model_rows_fixed_hu[1],
+  'Intercept[1]',
+  'Intercept[2]',
+  'Intercept[3]',
+  'Intercept[4]',
+  'Intercept[5]',
+  model_rows_fixed_hu[2:length(model_rows_fixed_hu)]
+)
+
+
 model_rows_random_hu <- c(
   # '--------------',
   # '-- RANDOM EFFECTS --',
@@ -374,6 +325,9 @@ model_rows_random_hu <- c(
   'sderr',
   'sigma'
 )
+
+model_rows_random_hu_ordinal <- c(model_rows_random_hu,'disc')
+
 
 ```
 
@@ -426,6 +380,19 @@ model_rownames_fixed_hu <- c(
   )
 
 
+
+model_rownames_fixed_hu_ordinal <- c(
+  model_rownames_fixed_hu[1],
+  'Intercept[1]',
+  'Intercept[2]',
+  'Intercept[3]',
+  'Intercept[4]',
+  'Intercept[5]',
+  model_rownames_fixed_hu[2:length(model_rownames_fixed_hu)]
+)
+
+
+
 model_rownames_random_hu <- c(
   # '--------------',
   # '-- RANDOM EFFECTS --',
@@ -455,6 +422,8 @@ model_rownames_random_hu <- c(
   'sigma'
 )
 
+model_rownames_random_hu_ordinal <- c(model_rownames_random_hu,'disc')
+
 
 ```
 
@@ -472,11 +441,22 @@ rows_to_pack_hu <- list(
   "Additional Parameters" = c(47,53)
   )
 
+rows_to_pack_hu_ordinal <- list(
+  "Intercepts" = c(1,7),
+  "Conditional Within-Person Effects" = c(3+5,10+5),
+  "Conditional Between-Person Effects" = c(11+5,17+5),
+  
+  "Hurdle Within-Person Effects" = c(18+5,25+5),
+  "Hurdle Between-Person Effects" = c(26+5,32+5),
+  
+  "Random Effects" = c(33+5, 46+5), 
+  "Additional Parameters" = c(47+5,53+6)
+  )
 
 ```
 
 
-## Subjective MVPA
+## Self-Reported MVPA
 
 ```{r explore_pa_sub_dist}
 
@@ -487,7 +467,7 @@ hist(log(df_double$pa_sub+00000000001), breaks = 40)
 
 ```
 
-## Hurdle Lognormal Model
+### Hurdle Lognormal Model
 ```{r pa_sub_lognormal, results='hide'}
 
 
@@ -534,12 +514,12 @@ prior1 <- c(
   , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
 )
 
-brms::validate_prior(
-  prior1, 
-  formula = formula, 
-  data = df_double, 
-  family = hurdle_lognormal()
-)
+#brms::validate_prior(
+#  prior1, 
+#  formula = formula, 
+#  data = df_double, 
+#  family = hurdle_lognormal()
+#)
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
 
@@ -587,56 +567,74 @@ summarize_brms(
   print_df(rows_to_pack = rows_to_pack_hu
 )
 
-mcmc_plot(pa_sub,
-          variable = c(
-            'b_persuasion_self_cw',
-            'b_persuasion_partner_cw',
-            'b_pressure_self_cw',
-            'b_pressure_partner_cw',
-            'b_pushing_self_cw',
-            'b_pushing_partner_cw'
-          ),
-          #regex = TRUE,
-          type = 'areas',
-          prob = 0.95)
+# plot continuous model
+variable <- c(
+  'b_persuasion_self_cw',
+  'b_persuasion_partner_cw',
+  'b_pressure_self_cw',
+  'b_pressure_partner_cw',
+  'b_pushing_self_cw',
+  'b_pushing_partner_cw'
+)
 
-
-
-mcmc_plot(pa_sub,
-          variable = c(
-            'b_hu_persuasion_self_cw',
-            'b_hu_persuasion_partner_cw',
-            'b_hu_pressure_self_cw',
-            'b_hu_pressure_partner_cw',
-            'b_hu_pushing_self_cw',
-            'b_hu_pushing_partner_cw'
-          ),
-          #regex = TRUE,
-          type = 'areas',
-          prob = 0.95
-          )
+mcmc_plot(
+  pa_sub,
+  variable = variable,
+  #regex = TRUE,
+  type = 'areas',
+  prob = 0.95
+)
 
 plot(
-  bayestestR::p_direction(pa_sub),
+  bayestestR::p_direction(pa_sub, parameter = variable),
   priors = TRUE
-) + 
-  #coord_cartesian(xlim = c(-3, 3)) +
-  theme_bw()
+) + theme_bw()
 
 
 plot(
-  bayestestR::rope(pa_sub),
+  bayestestR::rope(pa_sub, parameter = variable, range = c(-0.1, 0.1)),
+) + theme_bw()
+
+
+# plot continuous model
+variable <- c(
+  'b_hu_persuasion_self_cw',
+  'b_hu_persuasion_partner_cw',
+  'b_hu_pressure_self_cw',
+  'b_hu_pressure_partner_cw',
+  'b_hu_pushing_self_cw',
+  'b_hu_pushing_partner_cw'
+)
+
+mcmc_plot(
+  pa_sub,
+  variable = variable,
+  #regex = TRUE,
+  type = 'areas',
+  prob = 0.95
+)
+
+plot(
+  bayestestR::p_direction(pa_sub, parameter = variable),
+  priors = TRUE
+) + theme_bw()
+
+
+plot(
+  bayestestR::rope(pa_sub, parameter = variable, range = c(-0.18, 0.18)),
 ) + theme_bw()
 
 
 conditional_spaghetti(
   pa_sub, 
-  effects = c('persuasion_self_cw',
-              'persuasion_partner_cw',
-              'pressure_self_cw',
-              'pressure_partner_cw',
-              'pushing_self_cw',
-              'pushing_partner_cw'),
+  effects = c(
+    'persuasion_self_cw',
+    'persuasion_partner_cw',
+    'pressure_self_cw',
+    'pressure_partner_cw',
+    'pushing_self_cw',
+    'pushing_partner_cw'
+  ),
   group_var = 'coupleID',
   plot_full_range = TRUE
 )
@@ -648,265 +646,8 @@ conditional_spaghetti(
 
 marginaleffects::avg_predictions(pa_sub)
 
-
 ```
 
-Additionally, as a sensitivity analysis, we estimate the two part of the models separately. 
-
-## Two separate models
-
-### Modelling 0/1 
-
-```{r pa_sub_separate_inactive, results='hide', message=FALSE}
-
-df_double$pa_sub_zero <- as.factor(ifelse(df_double$pa_sub > 0, 1, 0))
-
-formula <- bf(
-  pa_sub_zero ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
-    
-    persuasion_self_cb + persuasion_partner_cb +
-    pressure_self_cb + pressure_partner_cb +
-    pushing_self_cb + pushing_partner_cb +
-    
-    day + 
-    
-    # Random effects
-    (1 + persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
-  #, autocor = autocor_str
-) 
-
-
-prior1 <- c(
-  , brms::set_prior("normal(0, 2)", class = "b")
-  , brms::set_prior("normal(0.5, 2.5)", class = "Intercept") 
-  , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-)
-
-#brms::validate_prior(
-#  prior1, 
-#  formula = formula, 
-#  data = df_double, 
-#  family = bernoulli()
-#  )
-
-
-pa_sub_zero_model <- my_brm(
-  mi = use_mi, 
-  imputed_data = implist,
-  
-  formula = formula, 
-  prior = prior1,
-  data = df_double, 
-  #family = brms::hurdle_lognormal(), 
-  #family = brms::hurdle_negbinomial(), 
-  family = brms::bernoulli(),
-  #control = list(adapt_delta = 0.95),
-  iter = iterations,
-  warmup = warmup,
-  chains = 4,
-  cores = 4,
-  seed = 7777,
-  file = file.path("models_cache_brms", paste0("pa_sub_hu_zero_part_NOAR", suffix))
-)
-
-```
-
-
-```{r check_pa_sub_separate_inactive}
-
-check_brms(pa_sub_zero_model, log_pp_check = FALSE)
-DHARMa.check_brms.all(pa_sub_zero_model, integer = TRUE, outliers_type = 'bootstrap')
-
-```
-
-
-```{r report_pa_sub_separate_inactive, results='asis', fig.width=8, fig.height=6, dpi=300}
-
-summarize_brms(
-  pa_sub_zero_model, 
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) %>%
-  print_df(rows_to_pack = rows_to_pack_hu
-)
-
-brms::mcmc_plot(pa_sub_zero_model,
-          variable = c(
-            'b_persuasion_self_cw',
-            'b_persuasion_partner_cw',
-            'b_pressure_self_cw',
-            'b_pressure_partner_cw',
-            'b_pushing_self_cw',
-            'b_pushing_partner_cw'
-          ),
-          #regex = TRUE,
-          type = 'areas',
-          prob = 0.95)
-
-plot(
-  bayestestR::p_direction(pa_sub_zero_model),
-  priors = TRUE
-) + 
-  coord_cartesian(xlim = c(-3, 3)) +
-  theme_bw()
-
-plot(
-  bayestestR::rope(pa_sub_zero_model)
-) + theme_bw()
-
-
-conditional_spaghetti(
-  pa_sub_zero_model, 
-  effects = c('persuasion_self_cw',
-              'persuasion_partner_cw',
-              'pressure_partner_cw',
-              'pushing_self_cw',
-              'pushing_partner_cw'),
-  group_var = 'coupleID',
-  plot_full_range = TRUE
-)
-
-```
-
-```{r pa_sub_zero_marginaleffects}
-
-marginaleffects::avg_predictions(pa_sub_zero_model)
-
-```
-
-### Modelling active Days
-```{r pa_sub_separate_active, results='hide', message=FALSE}
-
-# Only include active days
-df_double$pa_sub_non_zero <- ifelse(df_double$pa_sub > 0, df_double$pa_sub, NA)
-
-formula <- bf(
-  pa_sub_non_zero ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
-    
-    persuasion_self_cb + persuasion_partner_cb +
-    pressure_self_cb + pressure_partner_cb +
-    pushing_self_cb + pushing_partner_cb +
-    
-    day + 
-    
-    # Random effects
-    (1 + persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
-  ##, autocor = autocor_str
-) 
-
-
-
-prior1 <- c(
-  brms::set_prior("normal(0, 2.5)", class = "b")
-  , brms::set_prior("normal(0, 50)", class = "Intercept") 
-  , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-  , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
-)
-
-
-#brms::validate_prior(
-#  prior1, 
-#  formula = formula, 
-#  data = df_double, 
-#  family = lognormal()
-#  )
-
-
-pa_sub_active_model <- my_brm(
-  mi = use_mi, 
-  imputed_data = implist,
-  
-  formula = formula, 
-  prior = prior1,
-  data = df_double, 
-  family = lognormal(),
-  #control = list(adapt_delta = 0.95),
-  iter = iterations,
-  warmup = warmup,
-  chains = 4,
-  cores = 4,
-  seed = 7777,
-  file = file.path("models_cache_brms", paste0("pa_sub_hu_active_part_NOAR", suffix))
-)
-
-
-
-```
-
-
-```{r check_pa_sub_separate_active}
-
-check_brms(pa_sub_active_model, log_pp_check = TRUE)
-DHARMa.check_brms.all(pa_sub_active_model, integer = TRUE, outliers_type = 'bootstrap')
-
-```
-
-
-```{r report_pa_sub_separate_active, results='asis', fig.width=8, fig.height=6, dpi=300}
-
-
-summarize_brms(
-  pa_sub_active_model, 
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) %>%
-  print_df(rows_to_pack = rows_to_pack_hu
-)
-
-mcmc_plot(pa_sub_active_model,
-          variable = c(
-            'b_persuasion_self_cw',
-            'b_persuasion_partner_cw',
-            'b_pressure_self_cw',
-            'b_pressure_partner_cw',
-            'b_pushing_self_cw',
-            'b_pushing_partner_cw'
-          ),
-          #regex = TRUE,
-          type = 'areas',
-          prob = 0.95)
-
-plot(
-  bayestestR::p_direction(pa_sub_active_model),
-  priors = TRUE
-) + 
-  coord_cartesian(xlim = c(-3, 3)) +
-  theme_bw()
-
-plot(
-  bayestestR::rope(pa_sub_active_model)
-) + theme_bw()
-
-
-conditional_spaghetti(
-  pa_sub_active_model, 
-  effects = c('pressure_self_cw'),
-  transform_fn = function(x) {exp(x)},
-  group_var = 'coupleID',
-  plot_full_range = TRUE
-)
-
-```
-
-```{r pa_sub_active_model_marginaleffects}
-
-marginaleffects::avg_predictions(pa_sub_active_model)
-
-```
 
 ## Device Based MVPA 
 
@@ -924,12 +665,12 @@ hist(df_double$pa_obj_log, breaks = 50)
 
 
 
-### log gaussian
+### Lognormal Model
 
 ```{r pa_obj_log_g, results='hide', message=FALSE}
 
 formula <- bf(
-  log(pa_obj) ~ 
+  pa_obj ~ 
     persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw +
@@ -953,14 +694,15 @@ prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b")
   , brms::set_prior("normal(0, 50)", class = "Intercept") 
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-  , brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
+  , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
 )
+
 
 #brms::validate_prior(
 #  prior1, 
 #  formula = formula, 
 #  data = df_double, 
-#  family = gaussian()
+#  family = lognormal()
 #  )
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
@@ -972,7 +714,7 @@ pa_obj_log <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = gaussian(),
+  family = lognormal(),
   #control = list(adapt_delta = 0.95),
   iter = iterations,
   warmup = warmup,
@@ -1073,7 +815,7 @@ prior1 <- c(
   brms::set_prior("normal(0, 5)", class = "b")
   ,brms::set_prior("normal(0, 20)", class = "Intercept", lb=1, ub=6)
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
-  , brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
+  , brms::set_prior("student_t(3, 0, 2.5)", class = "sigma", lb = 0)
 )
 
 #brms::validate_prior(
@@ -1460,21 +1202,13 @@ hypothesis(is_reactance, "pressure_self_cw > pushing_self_cw")
 
 ```{r report_sidebyside, results = 'asis'}
 
-
-if (report_ordinal) {
-  model_rows_random_final <- model_rows_random_ordinal
-  model_rows_fixed_final <- model_rows_fixed_ordinal
-  model_rownames_fixed_final <- model_rownames_fixed_ordinal
-  model_rownames_random_final <- model_rownames_random_ordinal
-  rows_to_pack_final <- rows_to_pack_ordinal
-} else {
-  model_rows_random_final <- model_rows_random_hu
-  model_rows_fixed_final <- model_rows_fixed_hu
-  model_rownames_fixed_final <- model_rownames_fixed_hu
-  model_rownames_random_final <- model_rownames_random_hu
-  rows_to_pack_final <- rows_to_pack_hu
+process_model_component <- function(obj) {
+  # Convert to string, modify, and evaluate
+  name <- deparse(substitute(obj))
+  if (report_hurdle) name <- paste0(name, '_hu')
+  if (report_ordinal) name <- paste0(name, '_ordinal')
+  return(get(name, envir = parent.frame()))
 }
-
 
 bayesfactor = TRUE
 
@@ -1486,10 +1220,10 @@ all_models <- report_side_by_side(
   is_reactance,
   
   bayesfactor = bayesfactor,
-  model_rows_random = model_rows_random_final,
-  model_rows_fixed = model_rows_fixed_final,
-  model_rownames_random = model_rownames_random_final,
-  model_rownames_fixed = model_rownames_fixed_final
+  model_rows_random = process_model_component(model_rows_random),
+  model_rows_fixed = process_model_component(model_rows_fixed),
+  model_rownames_random = process_model_component(model_rownames_random),
+  model_rownames_fixed = process_model_component(model_rownames_fixed)
 ) 
 
 
