--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -559,6 +559,8 @@ DHARMa.check_brms.all(pa_sub, integer = TRUE, outliers_type = 'bootstrap')
 
 summarize_brms(
   pa_sub, 
+  rope_range = c(-0.18, 0.18),
+  bayesfactor = F,
   model_rows_fixed = model_rows_fixed_hu,
   model_rows_random = model_rows_random_hu,
   model_rownames_fixed = model_rownames_fixed_hu,
@@ -584,17 +586,7 @@ variable <- c(
 # Thus, for the lognormal distribution 
 # we need to sd of log(Y). For the continuous model. 
 rope_factor <- sd(log(pa_sub$data$pa_sub[pa_sub$data$pa_sub > 0]))
-
-df_report <- bayestestR::describe_posterior(
-  pa_sub, 
-  test = c(
-    "p_direction" 
-    ,"rope"
-    ,"p_map"
-    #,"bayesfactor"
-    ),
-  rope_range = c(-0.1 * rope_factor, 0.1 * rope_factor)
-) 
+rope_range = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
 df_report[!grepl('hu_', df_report$Parameter), ]
 
@@ -625,18 +617,10 @@ variable <- c(
   'b_hu_pushing_partner_cw'
 )
 
-df_report <- bayestestR::describe_posterior(
-  pa_sub, 
-  test = c(
-    "p_direction" 
-    ,"rope"
-    ,"p_map"
-    #,"bayesfactor"
-    ),
-  rope_range = c(-0.18, 0.18)
-) 
+rope_range = c(-0.18, 0.18)
 
 df_report[grepl('hu_', df_report$Parameter), ]
+
 
 plot(
   bayestestR::p_direction(pa_sub, parameter = variable),
@@ -647,10 +631,6 @@ plot(
 plot(
   bayestestR::rope(pa_sub, parameter = variable, range = c(-0.18, 0.18)),
 ) + theme_bw()
-
-
-
-
 
 
 
